--- a/SimpleWeather.UWP/Main/LocationsPage.xaml
+++ b/SimpleWeather.UWP/Main/LocationsPage.xaml
@@ -1,4 +1,4 @@
-﻿<helpers:CustomPage
+﻿<Page
     x:Class="SimpleWeather.UWP.Main.LocationsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,7 +11,7 @@
     SizeChanged="StackControl_SizeChanged"
     mc:Ignorable="d">
 
-    <helpers:CustomPage.Resources>
+    <Page.Resources>
         <helpers:LocationTypeConverter x:Key="locTypeConverter" />
         <Style x:Key="LocationsPanelHeaderStyle" TargetType="GridViewHeaderItem">
             <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
@@ -51,7 +51,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-    </helpers:CustomPage.Resources>
+    </Page.Resources>
 
     <Grid>
         <GridView
@@ -131,4 +131,4 @@
             </GridView.Footer>
         </GridView>
     </Grid>
-</helpers:CustomPage>
+</Page>
