--- a/SimpleWeather.UWP/Main/Shell.xaml
+++ b/SimpleWeather.UWP/Main/Shell.xaml
@@ -140,7 +140,16 @@
                 </muxc:NavigationViewItem>
             </muxc:NavigationView.MenuItems>
 
-            <Frame x:Name="FrameContent" NavigationFailed="FrameContent_NavigationFailed" />
+            <Grid>
+                <Grid
+                    x:Name="SnackbarContainer"
+                    VerticalAlignment="Bottom"
+                    Canvas.ZIndex="1" />
+                <Frame
+                    x:Name="FrameContent"
+                    Canvas.ZIndex="0"
+                    NavigationFailed="FrameContent_NavigationFailed" />
+            </Grid>
         </muxc:NavigationView>
 
         <VisualStateManager.VisualStateGroups>
