--- a/SimpleWeather.UWP/Main/WeatherAlertPage.xaml
+++ b/SimpleWeather.UWP/Main/WeatherAlertPage.xaml
@@ -1,4 +1,4 @@
-﻿<helpers:CustomPage
+﻿<Page
     x:Class="SimpleWeather.UWP.Main.WeatherAlertPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -75,4 +75,4 @@
             </ListView>
         </ScrollViewer>
     </Grid>
-</helpers:CustomPage>
+</Page>
