--- a/SimpleWeather.UWP/Main/WeatherChartsPage.xaml
+++ b/SimpleWeather.UWP/Main/WeatherChartsPage.xaml
@@ -1,4 +1,4 @@
-﻿<helpers:CustomPage
+﻿<Page
     x:Class="SimpleWeather.UWP.Main.WeatherChartsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -78,4 +78,4 @@
             </ItemsControl.ItemContainerStyle>
         </ListView>
     </Grid>
-</helpers:CustomPage>
+</Page>
