--- a/SimpleWeather.UWP/Main/WeatherRadarPage.xaml
+++ b/SimpleWeather.UWP/Main/WeatherRadarPage.xaml
@@ -1,4 +1,4 @@
-﻿<helpers:CustomPage
+﻿<Page
     x:Class="SimpleWeather.UWP.Main.WeatherRadarPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -15,4 +15,4 @@
     <Grid>
         <Border x:Name="RadarWebViewContainer" Loaded="RadarWebViewContainer_Loaded" />
     </Grid>
-</helpers:CustomPage>
+</Page>
