--- a/SimpleWeather.UWP/Controls/HourlyForecastItem.xaml
+++ b/SimpleWeather.UWP/Controls/HourlyForecastItem.xaml
@@ -10,6 +10,8 @@
     Width="150"
     Height="240"
     d:DataContext="{d:DesignInstance Type=local:HourlyForecastNowViewModel}"
+    d:RequestedTheme="Light"
+    DataContextChanged="HourlyForecastItem_DataContextChanged"
     mc:Ignorable="d">
 
     <UserControl.Resources>
@@ -44,7 +46,7 @@
             HorizontalAlignment="Left"
             d:UriSource="ms-appx:///SimpleWeather.Shared/Assets/WeatherIcons/dark/wi-day-sunny.png"
             ShowAsMonochrome="False"
-            UriSource="{Binding Icon, Mode=OneWay, Converter={StaticResource iconThemeConverter}}" />
+            UriSource="{x:Bind ViewModel.Icon, TargetNullValue='', Mode=OneWay, Converter={StaticResource iconThemeConverter}}" />
         <TextBlock
             Padding="10,0"
             d:Text="36°"
