SimpleWeather: WinUI update pt. 3
* ProgressAutoSuggestBox: update control ui
* Add BottomStepperNavigationBar to replace setup navigation stepper
* Update Setup UI
* Update ProgressAutoSuggestBox style over accent color

--- a/SimpleWeather.UWP/Controls/DataTemplates.xaml
+++ b/SimpleWeather.UWP/Controls/DataTemplates.xaml
@@ -27,7 +27,7 @@
                 Width="50"
                 Margin="-8,0,0,0"
                 FontFamily="Segoe MDL2 Assets"
-                Foreground="{ThemeResource SimpleBlue}"
+                Foreground="{ThemeResource AppAccentColorBrush}"
                 Glyph="&#xE7B7;"
                 Visibility="{x:Bind helpers:BindingExtensions.BoolToVisibility(IsEmpty, x:True), FallbackValue=Collapsed, Mode=OneWay}" />
             <TextBlock
