--- a/SimpleWeather.UWP/Setup/SetupPage.xaml
+++ b/SimpleWeather.UWP/Setup/SetupPage.xaml
@@ -7,183 +7,59 @@
     xmlns:local="using:SimpleWeather.UWP.Setup"
     xmlns:localcontrols="using:SimpleWeather.UWP.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+    Background="{ThemeResource AppColorBrush}"
     mc:Ignorable="d">
-    <Page.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.ThemeDictionaries>
-                <ResourceDictionary x:Key="Dark">
-                    <SolidColorBrush x:Key="SetupBackgroundBrush" Color="{ThemeResource SimpleBlueDark}" />
-                </ResourceDictionary>
-                <ResourceDictionary x:Key="Light">
-                    <SolidColorBrush x:Key="SetupBackgroundBrush" Color="{ThemeResource SimpleBlue}" />
-                </ResourceDictionary>
-            </ResourceDictionary.ThemeDictionaries>
-            <Style x:Key="ListBoxIndicatorItemStyle" TargetType="ListBoxItem">
-                <Setter Property="Margin" Value="10" />
-                <Setter Property="AllowFocusOnInteraction" Value="False" />
-                <Setter Property="IsHitTestVisible" Value="False" />
-                <Setter Property="IsTabStop" Value="False" />
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="ListBoxItem">
-                            <Grid>
-                                <Ellipse
-                                    x:Name="ListBoxIndicatorItem"
-                                    Width="10"
-                                    Height="10"
-                                    Fill="Transparent"
-                                    Stroke="White" />
-                                <VisualStateManager.VisualStateGroups>
-                                    <VisualStateGroup x:Name="CommonStates">
-                                        <VisualState x:Name="Unselected" />
-                                        <VisualState x:Name="Selected">
-                                            <Storyboard>
-                                                <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ListBoxIndicatorItem" Storyboard.TargetProperty="Fill">
-                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="White" />
-                                                </ObjectAnimationUsingKeyFrames>
-                                            </Storyboard>
-                                        </VisualState>
-                                        <VisualState x:Name="SelectedUnfocused">
-                                            <Storyboard>
-                                                <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ListBoxIndicatorItem" Storyboard.TargetProperty="Fill">
-                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="White" />
-                                                </ObjectAnimationUsingKeyFrames>
-                                            </Storyboard>
-                                        </VisualState>
-                                        <VisualState x:Name="SelectedPointerOver">
-                                            <Storyboard>
-                                                <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ListBoxIndicatorItem" Storyboard.TargetProperty="Fill">
-                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="White" />
-                                                </ObjectAnimationUsingKeyFrames>
-                                            </Storyboard>
-                                        </VisualState>
-                                    </VisualStateGroup>
-                                </VisualStateManager.VisualStateGroups>
-                            </Grid>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-            <Style x:Key="ListBoxIndicatorStyle" TargetType="ListBox">
-                <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}" />
-                <Setter Property="Background" Value="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}" />
-                <Setter Property="BorderBrush" Value="{ThemeResource SystemControlForegroundBaseHighBrush}" />
-                <Setter Property="BorderThickness" Value="{ThemeResource ListBoxBorderThemeThickness}" />
-                <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled" />
-                <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
-                <Setter Property="ScrollViewer.HorizontalScrollMode" Value="Disabled" />
-                <Setter Property="ScrollViewer.IsHorizontalRailEnabled" Value="True" />
-                <Setter Property="ScrollViewer.VerticalScrollMode" Value="Enabled" />
-                <Setter Property="ScrollViewer.IsVerticalRailEnabled" Value="True" />
-                <Setter Property="ScrollViewer.ZoomMode" Value="Disabled" />
-                <Setter Property="ScrollViewer.IsDeferredScrollingEnabled" Value="False" />
-                <Setter Property="ScrollViewer.BringIntoViewOnFocusChange" Value="True" />
-                <Setter Property="IsTabStop" Value="False" />
-                <Setter Property="TabNavigation" Value="Once" />
-                <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
-                <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
-                <Setter Property="UseSystemFocusVisuals" Value="{StaticResource UseSystemFocusVisuals}" />
-                <Setter Property="ItemContainerStyle" Value="{StaticResource ListBoxIndicatorItemStyle}" />
-                <Setter Property="ItemsPanel">
-                    <Setter.Value>
-                        <ItemsPanelTemplate>
-                            <StackPanel
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                Orientation="Horizontal" />
-                        </ItemsPanelTemplate>
-                    </Setter.Value>
-                </Setter>
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="ListBox">
-                            <Border
-                                x:Name="LayoutRoot"
-                                Background="{TemplateBinding Background}"
-                                BorderBrush="{TemplateBinding BorderBrush}"
-                                BorderThickness="{TemplateBinding BorderThickness}">
-                                <ScrollViewer
-                                    x:Name="ScrollViewer"
-                                    Padding="{TemplateBinding Padding}"
-                                    AutomationProperties.AccessibilityView="Raw"
-                                    BringIntoViewOnFocusChange="{TemplateBinding ScrollViewer.BringIntoViewOnFocusChange}"
-                                    HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
-                                    HorizontalScrollMode="{TemplateBinding ScrollViewer.HorizontalScrollMode}"
-                                    IsDeferredScrollingEnabled="{TemplateBinding ScrollViewer.IsDeferredScrollingEnabled}"
-                                    IsHorizontalRailEnabled="{TemplateBinding ScrollViewer.IsHorizontalRailEnabled}"
-                                    IsVerticalRailEnabled="{TemplateBinding ScrollViewer.IsVerticalRailEnabled}"
-                                    TabNavigation="{TemplateBinding TabNavigation}"
-                                    VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}"
-                                    VerticalScrollMode="{TemplateBinding ScrollViewer.VerticalScrollMode}"
-                                    ZoomMode="{TemplateBinding ScrollViewer.ZoomMode}">
-                                    <ItemsPresenter />
-                                </ScrollViewer>
-                            </Border>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-        </ResourceDictionary>
-    </Page.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
+        <Border
+            x:Name="AppTitleBar"
+            Grid.Row="0"
+            VerticalAlignment="Top"
+            Background="Transparent"
+            Canvas.ZIndex="1"
+            IsHitTestVisible="True"
+            RequestedTheme="Dark">
+            <TextBlock
+                x:Name="AppTitle"
+                Margin="12,0,0,0"
+                VerticalAlignment="Center"
+                d:Text="SimpleWeather"
+                Style="{StaticResource CaptionTextBlockStyle}"
+                Text="{x:Bind GetAppTitleFromSystem()}" />
+        </Border>
         <Frame
             x:Name="FrameContent"
-            Grid.Row="0"
-            Background="{ThemeResource SetupBackgroundBrush}" />
-        <Border
             Grid.Row="1"
-            Background="{ThemeResource SetupBackgroundBrush}"
-            BorderBrush="White"
-            BorderThickness="0,0.5,0,0">
-            <Grid
-                Grid.Row="1"
-                Height="52"
-                RequestedTheme="Dark">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <AppBarButton
-                    x:Name="BackBtn"
-                    x:Uid="Label_Back"
-                    Grid.Column="0"
-                    Margin="-2,-2,0,0"
-                    HorizontalAlignment="Left"
-                    Icon="Back"
-                    Label="Back"
-                    Style="{ThemeResource AppBarButtonRevealStyle}" />
-                <ListBox
-                    x:Name="IndicatorBox"
-                    Grid.Column="1"
-                    Height="50"
-                    Background="Transparent"
-                    Style="{ThemeResource ListBoxIndicatorStyle}">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <Ellipse
-                                Width="10"
-                                Height="10"
-                                Fill="Transparent"
-                                Stroke="White" />
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
-                <AppBarButton
-                    x:Name="NextBtn"
-                    x:Uid="Label_Next"
-                    Grid.Column="2"
-                    Margin="0,-2,-2,0"
-                    HorizontalAlignment="Right"
-                    Icon="Forward"
-                    Label="Next"
-                    Style="{ThemeResource AppBarButtonRevealStyle}" />
-            </Grid>
-        </Border>
+            d:SourcePageType="local:SetupWelcomePage" />
+        <localcontrols:BottomStepperNavigationBar
+            x:Name="BottomNavBar"
+            x:Uid="StepperNavBar"
+            Grid.Row="2"
+            d:ItemCount="5"
+            d:SelectedIndex="1"
+            BackButtonLabel="Back"
+            CompleteButtonIcon="Accept"
+            CompleteButtonLabel="Done"
+            NextButtonLabel="Next"
+            RequestedTheme="Dark"
+            StartButtonLabel="Get Started">
+            <localcontrols:BottomStepperNavigationBar.BackButtonIcon>
+                <FontIcon Glyph="&#xE76B;" />
+            </localcontrols:BottomStepperNavigationBar.BackButtonIcon>
+            <localcontrols:BottomStepperNavigationBar.NextButtonIcon>
+                <FontIcon Glyph="&#xE76C;" />
+            </localcontrols:BottomStepperNavigationBar.NextButtonIcon>
+            <localcontrols:BottomStepperNavigationBar.Resources>
+                <SolidColorBrush x:Key="ButtonBackground" Color="Transparent" />
+                <SolidColorBrush x:Key="ButtonBackgroundPointerOver" Color="#2DF9F9F9" />
+                <SolidColorBrush x:Key="ButtonBackgroundPressed" Color="#1DF9F9F9" />
+            </localcontrols:BottomStepperNavigationBar.Resources>
+        </localcontrols:BottomStepperNavigationBar>
     </Grid>
 </Page>
